--- a/index.html
+++ b/index.html
@@ -46,10 +46,44 @@
             </div>
         </div>
         <div class="arrow w-100 d-flex align-items-center flex-column mt-5">
-            <a class="text-decoration-none text-dark" href="#about"> More Info</a>
+            <a class="text-decoration-none text-dark" href="#About"> More Info</a>
             <img id="arrow" class="mt-1" src="images/downarrow.png" alt="arrow icon">
         </div>
       </section>
+    <section id="about" class="about container">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias excepturi quas aut quidem, vero voluptas, porro quos dolore labore repellat, iste sunt fuga aspernatur deleniti omnis doloribus voluptatibus pariatur expedita dolor et facere velit ducimus qui placeat. Saepe ea, voluptate quae ab doloremque dignissimos iure praesentium, fugiat omnis, ipsum error.</p>
+        <div class="about-exp-item">
+                <div class="about-exp-item-header">   
+                    <div>
+                        <h5>software engineer</h5>
+                        <p>Coding Studio 2020-now</p>
+                    </div>
+                    <button class="btn button" onclick="toogledetail(event)">More Info</button>
+                </div>
+                <p class="about-exp-item-detail">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus maxime eveniet quos sint, id eligendi quae autem, nemo quasi quisquam numquam velit sunt aliquam laboriosam nisi veniam. Atque, veritatis natus.</p>
+            </div>
+            <div class="about-exp-item">
+                <div class="about-exp-item-header">   
+                    <div>
+                        <h5>software engineer</h5>
+                        <p>Coding Studio 2020-now</p>
+                    </div>
+                    <button class="btn button" onclick="toogledetail(event)">More Info</button>
+                </div>
+                <p class="about-exp-item-detail">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus maxime eveniet quos sint, id eligendi quae autem, nemo quasi quisquam numquam velit sunt aliquam laboriosam nisi veniam. Atque, veritatis natus.</p>
+            </div>
+            <div class="about-exp-item">
+                <div class="about-exp-item-header">   
+                    <div>
+                        <h5>software engineer</h5>
+                        <p>Coding Studio 2020-now</p>
+                    </div>
+                    <button class="btn button" onclick="toogledetail(event)">More Info</button>
+                </div>
+                <p class="about-exp-item-detail">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus maxime eveniet quos sint, id eligendi quae autem, nemo quasi quisquam numquam velit sunt aliquam laboriosam nisi veniam. Atque, veritatis natus.</p>
+            </div>  
+        </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
