--- a/index.html
+++ b/index.html
@@ -84,6 +84,24 @@
             </div>  
         </div>
     </section>
+    <section id="work" class="work container">
+        <div class="row d-flex align-items-center gap-5">
+            <div class="col">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt animi perferendis minus nam facilis id doloremque sit vitae, repudiandae dicta aspernatur, exercitationem velit. Nihil pariatur ipsam est, rem sapiente nisi optio quis tenetur iste quas ad ducimus excepturi labore voluptatem ipsum at illo cumque, et totam placeat. Quis, perspiciatis atque?</p>
+            </div>
+            <div class="col work-img">
+                <div id="work-1" class="work-img-item">
+                    <img src="images/work-1.png" alt="work-1">
+                </div>
+                <div id="work-2" class="work-img-item">
+                    <img src="images/work-2.png" alt="work-2">
+                </div>
+                <div id="work-3" class="work-img-item">
+                    <img src="images/work-3.png" alt="work-3">
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
