--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
         </div>
         <div class="arrow w-100 d-flex align-items-center flex-column mt-5">
-            <a class="text-decoration-none text-dark" href="#About"> More Info</a>
+            <a class="text-decoration-none text-dark" href="#about"> More Info</a>
             <img id="arrow" class="mt-1" src="images/downarrow.png" alt="arrow icon">
         </div>
       </section>
@@ -99,6 +99,46 @@
                 <div id="work-3" class="work-img-item">
                     <img src="images/work-3.png" alt="work-3">
                 </div>
+            </div>
+        </div>
+    </section>
+    <section id="contact" class="contact container">
+        <div class="row d-flex align-items-center gap-50">
+            <div class="col">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum excepturi numquam tempore voluptatem natus, totam cum atque perferendis ipsa illo beatae, nihil ab temporibus accusantium animi eos dolores perspiciatis delectus ad quam eveniet facere nesciunt quis consequuntur! Iusto repellendus omnis provident alias quas quaerat excepturi aliquid natus eum! Similique, tempora.</p>
+                <div class="row">
+                    <div class="col d-flex align-items-center">
+                        <img src="images/Facebook.svg" alt="facebook icon">
+                        <p>Irwan Muhickal</p>
+                    </div>
+                    <div class="col d-flex align-items-center">
+                        <img src="images/Instagram.svg" alt="instagram icon">
+                        <p>@irwanmhckl</p>
+                    </div>
+                    <div class="col d-flex align-items-center">
+                        <img src="images/Twitter.svg" alt="twitter icon">
+                        <p>@muhickalboys</p>
+                    </div>
+                </div>  
+            </div>
+            <div class="col">
+                <form class="contact-form">
+                    <div class="mb-3">
+                      <label for="inp_email" class="form-label">Email address</label>
+                      <input type="email" class="form-control" id="inp_email" placeholder="example@mail.com">
+                    </div>
+                    <div class="mb-3">
+                      <label for="inp_subject" class="form-label">Subject</label>
+                      <input type="text" class="form-control" id="inp_subject" placeholder="Your Subject">
+                    </div>
+                    <div class="mb-3">
+                        <label for="inp_massage" class="form-label">Massage</label>
+                        <input type="text" class="form-control" id="inp_massage" placeholder="Your Massage">
+                      </div>
+                    <div class="d-flex justify-content-center mt-5">
+                        <button type="submit" class="btn button">Submit</button>
+                    </div>
+                  </form>
             </div>
         </div>
     </section>
