--- a/index.html
+++ b/index.html
@@ -21,34 +21,34 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="#about">About</a>
               </li>
               <li class="nav-item">
-                    <a class="nav-link" href="#">Work</a>
+                    <a class="nav-link" href="#work">Work</a>
               </li>
               <li class="nav-item">
-                    <a class="nav-link disabled">Contact</a>
+                    <a class="nav-link" href="#contact">Contact</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
       <section id="home" class="home container">
-        <div class="row d-flex align-items-center">
-            <div class="col-8">     
+        <div class="row d-flex align-items-center flex-md-row flex-column-reverse">
+            <div class="col-12 col-md-8">     
                 <h3 class="fw-semibold">Hi, I am</h3>
                 <h1 class="fw-bold">Irwan Muhickal</h1>
                 <p>i am software engineer based in indonesia</p>
                 <a class="btn" href="images/CV Irwan Muhickal 2022.docx" download>Resume</a>
             </div>
-            <div class="col-4">
+            <div class="col-12 col-md-4 d-flex justify-content-md-end justify-content-center">
                 <img src="images/foto irwan.jpeg" class="rounded-5" alt="potrait" width="140px">
             </div>
         </div>
-        <div class="arrow w-100 d-flex align-items-center flex-column mt-5">
-            <a class="text-decoration-none text-dark" href="#about"> More Info</a>
+        <a  href="#about" class="text-decoration-none arrow w-100 d-flex align-items-center flex-column mt-5">
+            <div class="text-dark"> More Info</div>
             <img id="arrow" class="mt-1" src="images/downarrow.png" alt="arrow icon">
-        </div>
+        </a>
       </section>
     <section id="about" class="about container">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias excepturi quas aut quidem, vero voluptas, porro quos dolore labore repellat, iste sunt fuga aspernatur deleniti omnis doloribus voluptatibus pariatur expedita dolor et facere velit ducimus qui placeat. Saepe ea, voluptate quae ab doloremque dignissimos iure praesentium, fugiat omnis, ipsum error.</p>
@@ -86,10 +86,10 @@
     </section>
     <section id="work" class="work container">
         <div class="row d-flex align-items-center gap-5">
-            <div class="col">
+            <div class="col-12 col-5">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt animi perferendis minus nam facilis id doloremque sit vitae, repudiandae dicta aspernatur, exercitationem velit. Nihil pariatur ipsam est, rem sapiente nisi optio quis tenetur iste quas ad ducimus excepturi labore voluptatem ipsum at illo cumque, et totam placeat. Quis, perspiciatis atque?</p>
             </div>
-            <div class="col work-img">
+            <div class="col-12 col-6 work-img">
                 <div id="work-1" class="work-img-item">
                     <img src="images/work-1.png" alt="work-1">
                 </div>
@@ -103,25 +103,25 @@
         </div>
     </section>
     <section id="contact" class="contact container">
-        <div class="row d-flex align-items-center gap-50">
-            <div class="col">
+        <div class="row d-flex align-items-center gap-5">
+            <div class="col-12 col-lg-6">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum excepturi numquam tempore voluptatem natus, totam cum atque perferendis ipsa illo beatae, nihil ab temporibus accusantium animi eos dolores perspiciatis delectus ad quam eveniet facere nesciunt quis consequuntur! Iusto repellendus omnis provident alias quas quaerat excepturi aliquid natus eum! Similique, tempora.</p>
                 <div class="row">
                     <div class="col d-flex align-items-center">
-                        <img src="images/Facebook.svg" alt="facebook icon">
-                        <p>Irwan Muhickal</p>
+                        <img class="w-25" src="images/Facebook.svg" alt="facebook icon">
+                        <p class="mb-0 ms-2">Irwan Muhickal</p>
                     </div>
                     <div class="col d-flex align-items-center">
-                        <img src="images/Instagram.svg" alt="instagram icon">
-                        <p>@irwanmhckl</p>
+                        <img class="w-25" src="images/Instagram.svg" alt="instagram icon">
+                        <p class="mb-0 ms-2">@irwanmhckl</p>
                     </div>
                     <div class="col d-flex align-items-center">
-                        <img src="images/Twitter.svg" alt="twitter icon">
-                        <p>@muhickalboys</p>
+                        <img class="w-25" src="images/Twitter.svg" alt="twitter icon">
+                        <pclass="mb-0 ms-2>@muhickalboys</p>
                     </div>
                 </div>  
             </div>
-            <div class="col">
+            <div class="col col-12 col-lg-5">
                 <form class="contact-form">
                     <div class="mb-3">
                       <label for="inp_email" class="form-label">Email address</label>
