--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
     </section>
     <section id="work" class="work container">
         <div class="row d-flex align-items-center gap-5">
-            <div class="col-12 col-5">
+            <div class="col-12 col-md-5">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt animi perferendis minus nam facilis id doloremque sit vitae, repudiandae dicta aspernatur, exercitationem velit. Nihil pariatur ipsam est, rem sapiente nisi optio quis tenetur iste quas ad ducimus excepturi labore voluptatem ipsum at illo cumque, et totam placeat. Quis, perspiciatis atque?</p>
             </div>
-            <div class="col-12 col-6 work-img">
+            <div class="col-12 col-md-6 work-img">
                 <div id="work-1" class="work-img-item">
                     <img src="images/work-1.png" alt="work-1">
                 </div>
